# score-simulator-py

./: .gitignore  README.md  main.py  pyproject.toml
score_simulator_py/: api.py  cli.py  models.py  types.py
tests/: conftest.py  data.py  test_api.py  test_cli.py  test_models.py  test_types.py
